Updated content and data on the page

--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
             <li><a href=""><img src="logo.png" alt="Metropolia Logo"></a></li>
         </ul>
         <ul class="navigation-menu">
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="product.html">Product</a></li>
             <li><a href="Contact.html">Contact</a></li>
         </ul>
@@ -50,7 +50,7 @@
             const links = document.querySelectorAll('.navigation-menu a');
             let currentPath = window.location.pathname.split('/').pop();
             if (currentPath === '') {
-                currentPath = 'Index.html';
+                currentPath = 'index.html';
             }
 
             links.forEach(link => {
