--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <ul class="navigation-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="product.html">Product</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
    <section class="text" >
